--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,25 @@
 plugins {
     id 'java-library'
+    id "io.qameta.allure" version "2.8.1"
 }
+
+allure {
+    autoconfigure = true
+    version = '2.13.8'  // Latest Allure Version
+
+    useJUnit5 {
+        version = '2.13.8' // Latest Allure Version
+    }
+
+}
+
 
 repositories {
     mavenCentral()
 }
 
 dependencies{
+
     testImplementation 'com.codeborne:selenide:5.17.3'
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
@@ -15,4 +28,9 @@ dependencies{
 
 test {
     useJUnitPlatform()
+    reports {
+        junitXml.enabled = false
+        html.enabled = true
+    }
 }
+
