--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ allure {
 
 }
 
+compileJava{
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
+}
+
 
 repositories {
     mavenCentral()
@@ -20,7 +25,8 @@ repositories {
 
 dependencies{
 
-    testImplementation 'com.codeborne:selenide:5.17.3'
+    compile('com.codeborne:selenide:5.17.3')
+    compile('io.qameta.allure:allure-java-commons:2.13.8')
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
