--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,24 @@ repositories {
     mavenCentral()
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+def allureVersion = '2.17.2',
+    junitVersion = '5.8.2'
+
+
+configurations {
+    testCompile
+}
+
 dependencies{
-    testImplementation 'com.codeborne:selenide:5.17.3'
+    testImplementation 'com.codeborne:selenide:6.0.3'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
 
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
 test {
