--- a/build.gradle
+++ b/build.gradle
@@ -1,47 +1,42 @@
 plugins {
     id 'java-library'
-    id "io.qameta.allure" version "2.8.1"
+    id 'io.qameta.allure' version '2.8.1'
 }
 
-allure {
-    autoconfigure = true
-    version = '2.13.8'  // Latest Allure Version
-
-    useJUnit5 {
-        version = '2.13.8' // Latest Allure Version
-    }
-
-}
-
-compileJava{
-    sourceCompatibility = '1.8'
-    targetCompatibility = '1.8'
-}
-
+group 'io.qameta.allure.examples'
+version '1.3'
 
 repositories {
     mavenCentral()
 }
 
-dependencies{
-
-    compile('com.codeborne:selenide:5.17.3')
-    compile('io.qameta.allure:allure-java-commons:2.13.8')
-
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
-}
-
-test {
-    useJUnitPlatform()
-    reports {
-        junitXml.enabled = false
-        html.enabled = true
-    }
-
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
+def allureVersion = '2.19.0',
+    junitVersion = '5.9.0'
+
+allure {
+    autoconfigure = true
+    }
+
+configurations {
+    testCompile
 }
 
+dependencies{
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    implementation 'com.codeborne:selenide:6.7.2'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+
+    implementation "io.qameta.allure:allure-java-commons:$allureVersion"
+    implementation "io.qameta.allure:allure-selenide:$allureVersion"
+
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+}
+
+test {
+    useJUnitPlatform()
+}
