--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,16 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-def allureVersion = '2.19.0',
+def allureVersion = '2.17.3',
     junitVersion = '5.9.0'
 
 allure {
     autoconfigure = true
+    aspectjweaver = true
+    version = '2.17.3'
+    allureJavaVersion = '2.8.1'
+
+    clean = true
     }
 
 configurations {
